--- a/playground/web/index.html
+++ b/playground/web/index.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Coppice Playground</title>
+        <title>Coppice playground</title>
         <link rel="stylesheet" href="/styles.css">
     </head>
     <body>
         <main class="layout">
             <header class="topbar">
-                <h1>Coppice Playground</h1>
+                <h1>Coppice playground</h1>
                 <div class="actions">
-                    <button id="new-session" type="button">New Session</button>
+                    <button id="new-session" type="button">New session</button>
                     <button id="run" type="button">Run</button>
                 </div>
             </header>
@@ -27,9 +27,9 @@
             </section>
 
             <section class="output-pane">
-                <h2>Program Output</h2>
+                <h2>Program output</h2>
                 <pre id="stdout"></pre>
-                <h2>Program Errors</h2>
+                <h2>Program errors</h2>
                 <pre id="stderr"></pre>
             </section>
 
