--- a/playground/web/index.html
+++ b/playground/web/index.html
@@ -18,7 +18,7 @@
 
             <section class="editor-pane">
                 <label for="editor">main.bin.coppice</label>
-                <textarea id="editor" spellcheck="false"></textarea>
+                <div id="editor"></div>
             </section>
 
             <section class="diagnostics-pane">
