--- a/playground/web/index.html
+++ b/playground/web/index.html
@@ -1,44 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Coppice playground</title>
-        <link rel="stylesheet" href="/styles.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Coppice Playground</title>
     </head>
     <body>
-        <main class="layout">
-            <header class="topbar">
-                <h1>Coppice playground</h1>
-                <div class="actions">
-                    <button id="new-session" type="button">New session</button>
-                    <button id="run" type="button">Run</button>
-                </div>
-            </header>
-
-            <section class="editor-pane">
-                <label for="editor">main.bin.copp</label>
-                <div id="editor"></div>
-            </section>
-
-            <section class="diagnostics-pane">
-                <h2>Diagnostics</h2>
-                <ul id="diagnostics"></ul>
-            </section>
-
-            <section class="output-pane">
-                <h2>Program output</h2>
-                <pre id="stdout"></pre>
-                <h2>Program errors</h2>
-                <pre id="stderr"></pre>
-            </section>
-
-            <footer class="status">
-                <span id="status">idle</span>
-            </footer>
-        </main>
-        <script src="/api.js"></script>
-        <script src="/editor.js"></script>
-        <script src="/app.js"></script>
+        <div id="app"></div>
+        <script type="module" src="/main.tsx"></script>
     </body>
 </html>
